objects/L2I_Credit__c.object
<CustomObject>
    <fields>
        <fullName>Cost_of_Credit__c</fullName>
        <label>Cost of Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Amount__c</fullName>
        <label>Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Type__c</fullName>
        <label>Credit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2I_Credit_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Credits</relationshipLabel>
        <relationshipName>Credits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Credit</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Shipset_Credit_only_allowed_on_IFEC</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(Credit_Type__c)  = &quot;Shipset&quot; 
	&amp;&amp;  TEXT(Opportunity__r.L2I_Product_Category__c) != &quot;IFEC&quot;</errorConditionFormula>
        <errorDisplayField>Credit_Type__c</errorDisplayField>
        <errorMessage>Shipset Credits can only be applied to IFEC Opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>negative_value_not_allowed</fullName>
        <active>true</active>
        <errorConditionFormula>(Credit_Amount__c &lt; 0 ||  Cost_of_Credit__c &lt; 0)</errorConditionFormula>
        <errorMessage>Negative amount is not allowed.</errorMessage>
    </validationRules>
</CustomObject>